--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+*.tfstate
+*.tfstate.backup
+*.tfstate.lock.info
+*gitignore*.tf
+.terraform/
+*.log
+*.bak
+.vagrant/
+
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
 node_modules
-.env
-.vscode
+
+.DS_Store
+.vscode/
+.sentinel
+.terraformrc
+terraform.rc
